Pequenos ajustes e impressao de receita
